<resources>
    <string name="app_name">Weather</string>
    <string name="search">Search</string>
    <string name="inputCoordinates">Please enter your coordinates !</string>
    <string name="inputLatitude">Latitude :</string>
    <string name="inputLongitude">Longitude :</string>
    <string name="pressure">Pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="windSpeed">Wind:</string>
    <string name="measurePressure">hPa</string>
    <string name="measureWindSpeed">m/s</string>
    <string name="title_activity_weather_list">WeatherListActivity</string>
    <string name="title_activity_weather_detail">WeatherDetailActivity</string>
    <string name="action_settings">menu</string>

</resources>
